Fixed CPP link and css bugs

--- a/src/containers/skillProgress/Progress.scss
+++ b/src/containers/skillProgress/Progress.scss
@@ -49,10 +49,10 @@
   .skills-bar {
     line-height: 4rem;
   }
-  .skills-image {
-    display: none;
-    order: 2;
-  }
+  // .skills-image {
+  //   display: none;
+  //   order: 2;
+  // }
 }
 
 @media (max-width: 768px) {
