--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -58,6 +58,9 @@
   text-decoration: none;
   margin-top: 10px;
   line-height: normal;
+  @media (max-width: 768px) {
+    font-size: 1.2rem;
+  }
 }
 
 .header .logo-name {
