Added mobile apps

--- a/src/containers/projects/Project.scss
+++ b/src/containers/projects/Project.scss
@@ -14,6 +14,14 @@
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 1rem 1rem;
 }
+.mobile-apps-image-div{
+  height:600px !important;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /* Media Query */
 @media (max-width: 1380px) {
