--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -54,7 +54,7 @@
   display: block;
   flex: none;
   float: left;
-  font-size: 0.75em;
+  font-size: 0.7em;
   text-decoration: none;
   margin-top: 10px;
   line-height: normal;
@@ -77,6 +77,7 @@
   clear: both;
   max-height: 0;
   transition: max-height 0.2s ease-out;
+  font-size:14px;
 }
 
 /* menu icon */
