--- a/src/containers/projects/Project.scss
+++ b/src/containers/projects/Project.scss
@@ -37,4 +37,7 @@
   .repo-cards-div-main {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
+  .chrome-cards-div-main{
+    width:50%;
+  }
 }
